--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 
+    //navigation
+    implementation "androidx.navigation:navigation-compose:2.5.0-beta01"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
 }
