--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-base_url="https://rickandmortyapi.com/api"
+base_url="https://rickandmortyapi.com/"
