--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,8 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.0-beta01"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
+    // Glide
+    implementation "com.github.bumptech.glide:glide:4.13.2"
+    implementation "io.coil-kt:coil-compose:2.1.0"
+
 }
